feat(bilibili): module

--- a/bilibili/bilibili.module.conf
+++ b/bilibili/bilibili.module.conf
@@ -1,5 +1,5 @@
-#!name= 哔哩哔哩优化
-#!desc= 包含港澳台区域解锁，强制缓存等功能
+#!name= 哔哩哔哩番剧
+#!desc= 港澳台区域解锁，强制允许缓存
 #!system=ios
 
 [Rule]
@@ -7,8 +7,9 @@ URL-REGEX,https://app.bilibili.com/x/v2/(splash|search/(defaultword|square)),REJ
 URL-REGEX,https://api.bilibili.com/x/v2/dm/ad,REJECT
 
 [MITM]
-hostname = %APPEND% api.bilibili.com
+hostname = %APPEND% api.bilibili.com, bilibili-*-api.kghost.info
 
 [Script]
-http-request api\.bilibili\.com\/pgc\/player\/api\/playurl script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/playurl_redirect.js
-http-response api\.bilibili\.com\/pgc\/view\/app\/season\? requires-body=1,max-size=262144,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/bangumi_download.js
+http-request api.bilibili.com/pgc/player/api/playurl script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/playurl_redirect.js
+http-response api.bilibili.com/pgc/view/app/season\? requires-body=1,max-size=262144,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/bangumi_download.js
+http-request pattern=^.*?bilibili.+?/pgc,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/region_unlock.js
