fix: module format

--- a/bilibili/bilibili.module.conf
+++ b/bilibili/bilibili.module.conf
@@ -10,6 +10,6 @@ URL-REGEX,https://api.bilibili.com/x/v2/dm/ad,REJECT
 hostname = %APPEND% api.bilibili.com, bilibili-*-api.kghost.info
 
 [Script]
-http-request pattern=(api\.)?bilibili[^.]*\.(kghost\.info|com)/pgc script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/region_unlock.js
-http-request api.bilibili.com/pgc/player/api/playurl script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/playurl_redirect.js
-http-response api.bilibili.com/pgc/view/app/season\? requires-body=1,max-size=262144,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/bangumi_download.js
+region_unlock = http-request,pattern=(api\.)?bilibili[^.]*\.(kghost\.info|com)/pgc,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/region_unlock.js
+playurl_redirect = http-request,api.bilibili.com/pgc/player/api/playurl,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/playurl_redirect.js
+bangumi_download = http-response,api.bilibili.com/pgc/view/app/season\?,requires-body=1,max-size=262144,script-path=https://raw.githubusercontent.com/Yesterday17/Surge-Script/master/bilibili/bangumi_download.js
